--- a/skills.html
+++ b/skills.html
@@ -36,28 +36,33 @@
   </section>
 
   <!-- SKILL CARDS -->
-  <section class="content-card">
+  <section class="skills-list">
+
+  <div class="skill-card">
     <h2>Programming Languages</h2>
     <p>Python, SQL, DSA</p>
-  </section>
+  </div>
 
-  <section class="content-card">
+  <div class="skill-card">
     <h2>Artificial Intelligence & Machine Learning</h2>
     <p>
       Supervised Learning, Unsupervised Learning, Machine Learning Model Training,
       Basic Generative AI, Prompt Engineering (Vertex AI)
     </p>
-  </section>
+  </div>
 
-  <section class="content-card">
+  <div class="skill-card">
     <h2>Web Development</h2>
     <p>HTML, CSS, JavaScript</p>
-  </section>
+  </div>
 
-  <section class="content-card">
+  <div class="skill-card">
     <h2>Databases</h2>
     <p>MySQL</p>
-  </section>
+  </div>
+
+</section>
+
 
 </main>
 
